curation-web/src/scss/curation.scss
$primary: #0080aa;
$font-family-sans-serif: "Source Sans 3", sans-serif;

@import "../node_modules/bootstrap/scss/mixins/banner";
// scss-docs-start import-stack
// Configuration
@import "../node_modules/bootstrap/scss/functions";
@import "../node_modules/bootstrap/scss/variables";
@import "../node_modules/bootstrap/scss/variables-dark";
@import "../node_modules/bootstrap/scss/maps";
@import "../node_modules/bootstrap/scss/mixins";
@import "../node_modules/bootstrap/scss/utilities";

// Layout & components
@import "../node_modules/bootstrap/scss/root";
@import "../node_modules/bootstrap/scss/reboot";
@import "../node_modules/bootstrap/scss/type";
@import "../node_modules/bootstrap/scss/images";
@import "../node_modules/bootstrap/scss/containers";
@import "../node_modules/bootstrap/scss/grid";
@import "../node_modules/bootstrap/scss/tables";
@import "../node_modules/bootstrap/scss/forms";
@import "../node_modules/bootstrap/scss/buttons";
@import "../node_modules/bootstrap/scss/transitions";
@import "../node_modules/bootstrap/scss/dropdown";
@import "../node_modules/bootstrap/scss/button-group";
@import "../node_modules/bootstrap/scss/nav";
@import "../node_modules/bootstrap/scss/navbar";
//@import "card";
//@import "accordion";
//@import "breadcrumb";
//@import "pagination";
//@import "badge";
//@import "alert";
//@import "progress";
//@import "list-group";
//@import "close";
//@import "toasts";
//@import "modal";
//@import "tooltip";
//@import "popover";
//@import "carousel";
//@import "spinners";
//@import "offcanvas";
//@import "placeholders";

// Helpers
@import "../node_modules/bootstrap/scss/helpers";

// Utilities
@import "../node_modules/bootstrap/scss/utilities/api";
// scss-docs-end import-stack

.instanceElement{
    padding: 15px;
}
.reportTable{
    border-collapse: collapse;
    padding: 6px;
}

.reportTable td {
    border: 1px solid #000;
    padding: 3px;
}

.reportTable th, .reportTable tfoot tr{
    border: 1px solid #000;
    background-color: #deddda;
    padding: 3px;
}

.centerContainer {
    display: flex;
    align-items: center;
    justify-content: center;
}

.text-rightl{
  text-align: right;
}

.maxTextWidth {
    max-width: 800px;
}

.highlight-button{
    background-color: #d8d8d8 !important;
}
div.infoLine{
    font-size: 0.8em;
}
div.floatLeft{
    float: left;
    margin-right: 5em;
}
div.floatRight{
    float: right;
    margin-left: 5em;
}
div.creationTime{
   float: left;
   font-size: 0.8em;
}
div.latestChecks{
   float: left;
   margin-left: 4em;
   font-size: 0.8em;	
}
div.download {
   float: right;
   font-size: 0.8em;
}
div.clear{
   clear: both;
}  
summary h2:after {
   font-size: 0.8em;
   content: url('/images/info-14.png');
   display: inline-block;
   padding-left: 10px;
}  
details summary { 
   list-style-type: none; 
}

details summary::-webkit-details-marker {
  display:none;
}
summary::-webkit-details-marker {
  display: none;
}

summary:focus {
  outline: none;
}

details[open] h2:after{
   content: url('/images/info_open-14.png');
}
.anchor:before {
	content: ''; 
	display: block; 
	position: relative; 
	width: 0; 
	height: 10vh; 
	margin-top: -10vh
}
div.markdown table {
	width: 100%;
}
div.markdown table, div.markdown th, div.markdown td {
  border: 1px solid;
}
.alert{
    background-color: rgba(250, 88, 88, 0.76);
}
/* necessary to set text color for a whole row */
tr.text-danger td, tr.text-warning td, tr.text-success td {
    color: inherit;
}
div.dropzone {
    border: 3px dashed #888;
    border-radius: 16px;
    box-shadow: 2px 2px 5px #ccc;
    margin-bottom: 20px;
    margin-top: 10px;
    padding: 10px;
}
/*
li.active, li.nav-item:hover{
    color: #ffffff;!important;
    background-color: #0080aa;
}

 */

